# xml-json-processor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  formathandler.py  main.py  models.py  processor.py  pyproject.toml
sample-requests/: sample.txt
src/: config.py  data_preprocessing.py  data_processing.py  formathandler.py  formatprocessor.py  main.py  models.py  pyproject.toml
