[tool.poetry]
name = "xml-json-processor"
version = "0.1.0"
description = ""
authors = ["modernpacifist <modernpacifist@gmail.com>"]
readme = "README.md"
packages = [{include = "xml_json_processor"}]

[tool.poetry.dependencies]
python = "^3.9"
dateparser = "^1.2.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
fastapi = "^0.105.0"
xmltodict = "^0.13.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
